fix overflow

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,6 @@
     margin: 0;
     box-sizing: border-box;
     font-size: 1em;
-    overflow-x: hidden;
 }
 
 @font-face {
@@ -302,7 +301,7 @@ main {
     aside {
         padding-bottom: initial;
         padding-top: 30px;
-        grid-template-rows: 1fr 0.5fr 0.5fr;
+        grid-template-rows: 1fr 0.3fr .4fr;
     }
     #social-networks {
         grid-template-rows: auto;
